<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/welcomemenu5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:fontFamily="@font/poppins"
            android:text="@string/questions_description"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faqtext" />

        <TextView
            android:id="@+id/faqtext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/ask_fragment_questions_button"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="@+id/welcomemenu5"
            app:layout_constraintStart_toStartOf="@+id/welcomemenu5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/faqtext2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins"
            android:text="@string/ask_fragment_text_1"
            app:layout_constraintEnd_toEndOf="@+id/welcomemenu5"
            app:layout_constraintStart_toStartOf="@+id/welcomemenu5"
            app:layout_constraintTop_toBottomOf="@+id/welcomemenu5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/ask_fragment_text_2"
            app:layout_constraintEnd_toEndOf="@+id/faqtext2"
            app:layout_constraintStart_toStartOf="@+id/faqtext2"
            app:layout_constraintTop_toBottomOf="@+id/faqtext2" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/ask_fragment_text_3"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:layout_height="wrap_content"
            android:text="@string/ask_fragment_text_4"
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/ask_fragment_text_5"
            app:layout_constraintEnd_toEndOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>