<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/AskText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ask_fragment_title"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/questionsButton"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0070C0"
        android:fontFamily="@font/poppins"
        android:text="@string/ask_fragment_questions_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AskText" />

    <Button
        android:id="@+id/assistenza"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#0070C0"
        android:fontFamily="@font/poppins"
        android:text="@string/ask_fragment_support_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionsButton" />

    <Button
        android:id="@+id/coupons"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#0070C0"
        android:fontFamily="@font/poppins"
        android:text="@string/ask_fragment_enter_coupon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assistenza" />
</androidx.constraintlayout.widget.ConstraintLayout>