<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/register_edittext_your_name"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/accountSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/icon4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@android:drawable/ic_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toStartOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/register_edittext_your_email"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountEmail" />

    <ImageView
        android:id="@+id/icon2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@android:drawable/ic_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/surnameInput"
        app:layout_constraintEnd_toStartOf="@+id/surnameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/surnameInput" />

    <ImageView
        android:id="@+id/icon1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@android:drawable/ic_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/nameInput"
        app:layout_constraintEnd_toStartOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/register_edittext_your_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountPassword" />

    <EditText
        android:id="@+id/surnameInput"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="#EBEBEB"
        android:ems="10"
        android:hint="@string/register_edittext_your_surname"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/accountEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accountEmail"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/poppins"

        android:text="@string/register_textview_email"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountName"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_textview_name"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/nameInput" />

    <TextView
        android:id="@+id/accountSurname"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_textview_surname"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/surnameInput"
        app:layout_constraintStart_toStartOf="@+id/surnameInput" />

    <TextView
        android:id="@+id/accountPassword"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_textview_password"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:backgroundTint="#0070C0"
        android:fontFamily="@font/poppins"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_error_general_issue"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#0070C0"
        android:fontFamily="@font/poppins"
        android:text="@string/register_button_go_back"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <ImageView
        android:id="@+id/icon3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@android:drawable/ic_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/emailInput"
        app:layout_constraintEnd_toStartOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailInput" />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/register_textview_about_you_text"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/accountName"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>