<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/destination_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/user_book_no_destination_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_book_location"
        app:layout_constraintStart_toStartOf="@+id/destination_name"
        app:layout_constraintTop_toBottomOf="@+id/destination_name" />

    <TextView
        android:id="@+id/end_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/end_date"
        app:layout_constraintStart_toEndOf="@+id/end_date" />

    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_book_start_date"
        app:layout_constraintStart_toStartOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/start_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/start_date"
        app:layout_constraintStart_toEndOf="@+id/start_date" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_book_end_date"
        app:layout_constraintStart_toStartOf="@+id/start_date"
        app:layout_constraintTop_toBottomOf="@+id/start_date" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="location_text"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintStart_toEndOf="@+id/location" />

    <TextView
        android:id="@+id/book_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="book_id"
        android:textSize="16sp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>